# table-transformer

./: .gitignore  README.md  files.trace  pyproject.toml
training/: estimator.py  experiment.py  experiment.sh  generic_transformer.py  params.yml
