[tool.poetry]
name = "tabular-attention"
version = "0.1.0"
description = ""
authors = ["Cristian Garcia <cgarcia.e88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.1.0"
dataget = "^0.4.9"
dicto = "^0.2.0"
pyarrow = "^0.16.0"
flask = "^1.1.1"
eventlet = "^0.25.1"
plotly = "^4.5.4"
imbalanced-learn = "^0.6.2"
jupyter = "^1.0.0"
matplotlib = "^3.2.1"
debugpy = "^1.0.0-beta.9"
torch = "^1.5.1"
torchvision = "^0.6.1"
skorch = "^0.8.0"

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0", allow-prereleases = true}
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
